--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -40,6 +40,10 @@ h3, h5
 hr.grisOscuro
 	border-color: $grisOscuro !important
 
+ul.list-undecorated
+	padding-left: 10px
+
+
 .auspiciantes
 	margin-bottom: 30px
 
