--- a/app/webroot/sass/_colors.sass
+++ b/app/webroot/sass/_colors.sass
@@ -2,6 +2,8 @@
 $azul: #0054A6
 $azulClaro: #008ED3
 $black: #000000
+$link: #333
+$linkHover: #774d81
 $blackNavbar: #080808
 $grisOscuro: #9D9C9D
 $grisDefault: #333333
