--- a/app/webroot/sass/tracks/iframe.sass
+++ b/app/webroot/sass/tracks/iframe.sass
@@ -1,3 +1,9 @@
+@import fonts
+
+h3
+	font-family: 'Rokkitt', serif
+	font-size: 1.7em
+
 .col-video
 	display: inline-block
 	height: 241px
@@ -8,7 +14,6 @@
 	
 	& h3
 		margin-top: 10px
-		font-size: 18px
 		
 	& img
 		height: 120px
