--- a/app/webroot/css/tracks/iframe.css
+++ b/app/webroot/css/tracks/iframe.css
@@ -1,4 +1,11 @@
-/* line 1, ../../sass/tracks/iframe.sass */
+@import url("http://fonts.googleapis.com/css?family=Rokkitt:400,700");
+/* line 3, ../../sass/tracks/iframe.sass */
+h3 {
+  font-family: "Rokkitt", serif;
+  font-size: 1.7em;
+}
+
+/* line 7, ../../sass/tracks/iframe.sass */
 .col-video {
   display: inline-block;
   height: 241px;
@@ -7,12 +14,11 @@
   position: relative;
   width: 230px;
 }
-/* line 9, ../../sass/tracks/iframe.sass */
+/* line 15, ../../sass/tracks/iframe.sass */
 .col-video h3 {
   margin-top: 10px;
-  font-size: 18px;
 }
-/* line 13, ../../sass/tracks/iframe.sass */
+/* line 18, ../../sass/tracks/iframe.sass */
 .col-video img {
   height: 120px;
 }
