FIX Correción de h3 en default layout

--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -1,4 +1,4 @@
-@import colors, compass
+@import colors, compass, fonts
 
 a
 	color: $link
@@ -35,7 +35,9 @@ h1.category
 		font-weight: normal
 
 h3, h5
-	color: $naranja
+	color: $link
+	font-family: 'Rokkitt', serif
+	font-size: 1.7em
 	font-weight: bold
 	margin: 0
 	
