--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -1,3 +1,4 @@
+@import url("http://fonts.googleapis.com/css?family=Rokkitt:400,700");
 /* line 3, ../../sass/layouts/default.sass */
 a {
   color: #333333;
@@ -42,116 +43,118 @@ h1.category > .label-default {
 
 /* line 37, ../../sass/layouts/default.sass */
 h3, h5 {
-  color: #fd8d46;
+  color: #333333;
+  font-family: "Rokkitt", serif;
+  font-size: 1.7em;
   font-weight: bold;
   margin: 0;
 }
-/* line 42, ../../sass/layouts/default.sass */
+/* line 44, ../../sass/layouts/default.sass */
 h3 > a, h5 > a {
   color: #333333;
 }
-/* line 45, ../../sass/layouts/default.sass */
+/* line 47, ../../sass/layouts/default.sass */
 h3 > a:hover, h5 > a:hover {
   color: #774d81;
 }
 
-/* line 48, ../../sass/layouts/default.sass */
+/* line 50, ../../sass/layouts/default.sass */
 hr.grisOscuro {
   border-color: #9d9c9d !important;
 }
 
-/* line 51, ../../sass/layouts/default.sass */
+/* line 53, ../../sass/layouts/default.sass */
 ul.list-undecorated {
   padding-left: 10px;
 }
 
-/* line 55, ../../sass/layouts/default.sass */
+/* line 57, ../../sass/layouts/default.sass */
 .auspiciantes {
   margin-bottom: 30px;
 }
 
-/* line 58, ../../sass/layouts/default.sass */
+/* line 60, ../../sass/layouts/default.sass */
 .categories-menu {
   margin-bottom: 10px;
 }
-/* line 61, ../../sass/layouts/default.sass */
+/* line 63, ../../sass/layouts/default.sass */
 .categories-menu > span {
   padding: 15px;
 }
 
-/* line 64, ../../sass/layouts/default.sass */
+/* line 66, ../../sass/layouts/default.sass */
 .checkbox {
   color: #333333;
 }
 
-/* line 68, ../../sass/layouts/default.sass */
+/* line 70, ../../sass/layouts/default.sass */
 .dropdown-menu > li > a:hover {
   background-color: #9d9c9d;
   color: white;
 }
 
-/* line 72, ../../sass/layouts/default.sass */
+/* line 74, ../../sass/layouts/default.sass */
 .list-undecorated {
   list-style: none;
 }
 
-/* line 75, ../../sass/layouts/default.sass */
+/* line 77, ../../sass/layouts/default.sass */
 .logo-superior {
   margin-bottom: 20px;
 }
-/* line 78, ../../sass/layouts/default.sass */
+/* line 80, ../../sass/layouts/default.sass */
 .logo-superior .img-responsive {
   width: 100px;
 }
 
-/* line 81, ../../sass/layouts/default.sass */
+/* line 83, ../../sass/layouts/default.sass */
 .menu-sm {
   font-size: 0.9em;
 }
-/* line 84, ../../sass/layouts/default.sass */
+/* line 86, ../../sass/layouts/default.sass */
 .menu-sm i {
   margin-right: 0.5em;
   text-align: center;
   width: 1.4em;
 }
 
-/* line 89, ../../sass/layouts/default.sass */
+/* line 91, ../../sass/layouts/default.sass */
 .nav-categorias {
   position: relative;
   z-index: -1;
 }
 
-/* line 93, ../../sass/layouts/default.sass */
+/* line 95, ../../sass/layouts/default.sass */
 .nav-tabs {
   font-weight: bold;
 }
-/* line 96, ../../sass/layouts/default.sass */
+/* line 98, ../../sass/layouts/default.sass */
 .nav-tabs > li > a:hover {
   background-color: #fd8d46;
 }
 
-/* line 99, ../../sass/layouts/default.sass */
+/* line 101, ../../sass/layouts/default.sass */
 .navbar {
   border-radius: 0px !important;
 }
 
-/* line 102, ../../sass/layouts/default.sass */
+/* line 104, ../../sass/layouts/default.sass */
 .navbar-form {
   margin: 4px;
 }
 
-/* line 105, ../../sass/layouts/default.sass */
+/* line 107, ../../sass/layouts/default.sass */
 .navbar-inverse {
   background-color: #080808 !important;
   height: 50px;
 }
-/* line 109, ../../sass/layouts/default.sass */
+/* line 111, ../../sass/layouts/default.sass */
 .navbar-inverse .navbar-brand {
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-/* line 113, ../../sass/layouts/default.sass */
+/* line 115, ../../sass/layouts/default.sass */
 .navbar-top {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #994717), color-stop(100%, #fd8d46));
   background-image: -webkit-linear-gradient(#994717, #fd8d46);
@@ -169,7 +172,7 @@ ul.list-undecorated {
   border-bottom-left-radius: 70%;
 }
 
-/* line 125, ../../sass/layouts/default.sass */
+/* line 127, ../../sass/layouts/default.sass */
 .navbar-out {
   background-color: #0054a6;
   border-bottom-color: #0054a6;
@@ -186,7 +189,7 @@ ul.list-undecorated {
   z-index: 1000;
 }
 
-/* line 140, ../../sass/layouts/default.sass */
+/* line 142, ../../sass/layouts/default.sass */
 .text-grisOscuro {
   color: #9d9c9d;
 }
