--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -13,8 +13,6 @@ body
 		image: image-url('backgrounds/backPC.jpg')
 		repeat: no-repeat
 		position: top left
-	// +background-size(cover)
-	// +background-size(100% 120%)
 	color: $black
 
 	& > .container
@@ -53,7 +51,6 @@ hr.grisOscuro
 ul.list-undecorated
 	padding-left: 10px
 
-
 .auspiciantes
 	margin-bottom: 30px
 
@@ -71,9 +68,12 @@ ul.list-undecorated
 	background-color: $grisOscuro
 	color: $white
 
+.list-group-item
+	padding: 10px 7px !important
+
 .list-undecorated
 	list-style: none
-	
+
 .logo-superior
 	margin-bottom: 20px
 	
