Margenes del menú.

--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -68,6 +68,9 @@ ul.list-undecorated
 	background-color: $grisOscuro
 	color: $white
 
+.img-responsive
+	margin: 0 auto
+
 .list-group-item
 	padding: 10px 7px !important
 
