--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -94,72 +94,77 @@ ul.list-undecorated {
 }
 
 /* line 71, ../../sass/layouts/default.sass */
+.img-responsive {
+  margin: 0 auto;
+}
+
+/* line 74, ../../sass/layouts/default.sass */
 .list-group-item {
   padding: 10px 7px !important;
 }
 
-/* line 74, ../../sass/layouts/default.sass */
+/* line 77, ../../sass/layouts/default.sass */
 .list-undecorated {
   list-style: none;
 }
 
-/* line 77, ../../sass/layouts/default.sass */
+/* line 80, ../../sass/layouts/default.sass */
 .logo-superior {
   margin-bottom: 20px;
 }
-/* line 80, ../../sass/layouts/default.sass */
+/* line 83, ../../sass/layouts/default.sass */
 .logo-superior .img-responsive {
   width: 100px;
 }
 
-/* line 83, ../../sass/layouts/default.sass */
+/* line 86, ../../sass/layouts/default.sass */
 .menu-sm {
   font-size: 0.9em;
 }
-/* line 86, ../../sass/layouts/default.sass */
+/* line 89, ../../sass/layouts/default.sass */
 .menu-sm i {
   margin-right: 0.5em;
   text-align: center;
   width: 1.4em;
 }
 
-/* line 91, ../../sass/layouts/default.sass */
+/* line 94, ../../sass/layouts/default.sass */
 .nav-categorias {
   position: relative;
   z-index: -1;
 }
 
-/* line 95, ../../sass/layouts/default.sass */
+/* line 98, ../../sass/layouts/default.sass */
 .nav-tabs {
   font-weight: bold;
 }
-/* line 98, ../../sass/layouts/default.sass */
+/* line 101, ../../sass/layouts/default.sass */
 .nav-tabs > li > a:hover {
   background-color: #fd8d46;
 }
 
-/* line 101, ../../sass/layouts/default.sass */
+/* line 104, ../../sass/layouts/default.sass */
 .navbar {
   border-radius: 0px !important;
 }
 
-/* line 104, ../../sass/layouts/default.sass */
+/* line 107, ../../sass/layouts/default.sass */
 .navbar-form {
   margin: 4px;
 }
 
-/* line 107, ../../sass/layouts/default.sass */
+/* line 110, ../../sass/layouts/default.sass */
 .navbar-inverse {
   background-color: #080808 !important;
   height: 50px;
 }
-/* line 111, ../../sass/layouts/default.sass */
+/* line 114, ../../sass/layouts/default.sass */
 .navbar-inverse .navbar-brand {
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-/* line 115, ../../sass/layouts/default.sass */
+/* line 118, ../../sass/layouts/default.sass */
 .navbar-top {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #994717), color-stop(100%, #fd8d46));
   background-image: -webkit-linear-gradient(#994717, #fd8d46);
@@ -177,7 +182,7 @@ ul.list-undecorated {
   border-bottom-left-radius: 70%;
 }
 
-/* line 127, ../../sass/layouts/default.sass */
+/* line 130, ../../sass/layouts/default.sass */
 .navbar-out {
   background-color: #0054a6;
   border-bottom-color: #0054a6;
@@ -194,7 +199,7 @@ ul.list-undecorated {
   z-index: 1000;
 }
 
-/* line 142, ../../sass/layouts/default.sass */
+/* line 145, ../../sass/layouts/default.sass */
 .text-grisOscuro {
   color: #9d9c9d;
 }
