--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -24,13 +24,20 @@ footer
 	margin-top: 50px
 	padding: 30px 15px 60px 15px	
 
-h1.category
-	margin-top: -6px
-	
-	& > .label-default
-		background-color: black
-		color: $naranja
-		font-weight: normal
+h1
+	&.iframe
+		background-color: saturate(darken($lila, 30%), 20%)
+		box-shadow: 1px 1px 3px 0px rgba(50, 50, 50, 0.75)
+		font-family: 'Rokkitt', serif
+		font-size: 1.2em
+		
+	&.category
+		margin-top: -6px
+		
+		& > .label-default
+			background-color: black
+			color: $naranja
+			font-weight: normal
 
 h3, h5
 	color: $link
