--- a/app/webroot/sass/layouts/default.sass
+++ b/app/webroot/sass/layouts/default.sass
@@ -2,7 +2,7 @@
 
 a
 	color: $link
-	
+
 	&:hover
 		color: $linkHover
 		text-decoration: none !important
@@ -13,7 +13,7 @@ body
 		image: image-url('backgrounds/backPC.jpg')
 		repeat: no-repeat
 		position: top left
-	color: $black
+	// color: $black
 
 	& > .container
 		background-color: $lila
@@ -22,7 +22,7 @@ body
 
 footer
 	margin-top: 50px
-	padding: 30px 15px 60px 15px	
+	padding: 30px 15px 60px 15px
 
 h1
 	&.iframe
@@ -30,10 +30,10 @@ h1
 		box-shadow: 1px 1px 3px 0px rgba(50, 50, 50, 0.75)
 		font-family: 'Rokkitt', serif
 		font-size: 1.2em
-		
+
 	&.category
 		margin-top: -6px
-		
+
 		& > .label-default
 			background-color: black
 			color: $naranja
@@ -43,9 +43,9 @@ h3, h5
 	color: $link
 	font-family: 'Rokkitt', serif
 	font-size: 1.7em
-	font-weight: bold
-	margin: 0
-	
+	// font-weight: bold
+	// margin: 0
+
 	& > a
 		color: $link
 
@@ -63,13 +63,13 @@ ul.list-undecorated
 
 .categories-menu
 	margin-bottom: 10px
-	
+
 	& > span
 		padding: 15px
 
 .checkbox
 	color: $grisDefault
-	
+
 
 .dropdown-menu > li > a:hover
 	background-color: $grisOscuro
@@ -86,13 +86,13 @@ ul.list-undecorated
 
 .logo-superior
 	margin-bottom: 20px
-	
+
 	.img-responsive
-		width: 100px		
+		width: 100px
 
 .menu-sm
 	font-size: 0.9em
-	
+
 	i
 		margin-right: 0.5em
 		text-align: center
@@ -104,7 +104,7 @@ ul.list-undecorated
 
 .nav-tabs
 	font-weight: bold
-	
+
 	& > li > a:hover
 		background-color: $naranja
 
