--- a/app/webroot/sass/tracks/iframe.sass
+++ b/app/webroot/sass/tracks/iframe.sass
@@ -1,21 +1,1 @@
-@import fonts
-
-h3
-	font-family: 'Rokkitt', serif
-	font-size: 1.7em
-
-.col-video
-	display: inline-block
-	height: 241px
-	overflow: hidden
-	margin: 7px
-	position: relative
-	width: 230px
-	
-	& h3
-		margin-top: 10px
-		
-	& img
-		// height: 120px
-		max-height: 120px
-		width: auto
+@import mediaIframe
